# unreal-OpenCity

./: .gitignore  .ignore  AGENT.md  CLAUDE.md  KennedyCenter  KennedyCenter.blend  OpenCity.uproject  pyproject.toml
.docs/: ADR-001-layered-architecture.md  ADR-002-runtime-data-flow.md  ADR-003-uml-structure.md  ADR-004-gas-character-division-system.md  GameDesign.md  README.md  TESTLEVEL-001-toy-store-smoke-drill.md
.githooks/: pre-commit
Config/: DefaultEditor.ini  DefaultEngine.ini  DefaultGame.ini
Content/Input/: IA_Foot_Jump.uasset  IA_Foot_Look.uasset  IA_Foot_Move.uasset  IA_Interact.uasset  IA_Vehicle_Steer.uasset  IA_Vehicle_Throttle.uasset  IMC_Foot.uasset  IMC_Vehicle.uasset
Content/Maps/: BasicLevel.umap
Content/Props/: Arm_Base.uasset  Arm_EE.uasset  Arm_Elbow.uasset  Arm_Seg1.uasset  Arm_Seg2.uasset  BaseCharacter.blend  BaseCharacter.blend1  Bench.blend  CHR_Firefighter_Lego.fbx  CHR_Firefighter_Lego.uasset  CHR_Firefighter_Lego_Anim_ARM_Firefighter_AN_FF_Chop_Door.uasset  CHR_Firefighter_Lego_Anim_ARM_Firefighter_AN_FF_Walk_Basic.uasset  CHR_Firefighter_Lego_PhysicsAsset.uasset  CHR_Police_Lego.fbx  CHR_Police_Lego.uasset  CHR_Police_Lego_PhysicsAsset.uasset  (+255 more)
Plugins/: McpAutomationBridge
Source/: OpenCity.Target.cs  OpenCityEditor.Target.cs
Tools/: import_base_character_unreal.py  import_base_character_unreal.sh  run_tests.sh  setup.sh  setup_content.py  sync_base_character_sockets_unreal.py  sync_base_character_sockets_unreal.sh  validate_base_character_import.sh
memory/: MEMORY.md  project_burnout_lessons.md  project_environment.md
(+54 files in other folders)
